cmake_minimum_required(VERSION 3.1)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")

add_executable(1_Manhattan_Crepe_Cart 1_Manhattan_Crepe_Cart.cpp)
add_executable(2_Draupnir 2_Draupnir.cpp)
add_executable(3_Fair_Fight 3_Fair_Fight.cpp)
